--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 	<div class="jumbotron text-center">
 		<h1>Prueba de Front end</h1>
 		<p>Aqui luego se pondría, por ejemplo, un textbox para introducir el nombre y dni.</p>
+		<p>Falta por crear el javascript.</p>
 	</div>
 </body>
 </html>
