Marca de que trabajo

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,10 @@
 <body>
 	<div class="jumbotron text-center">
 		<h1>Prueba de Front end</h1>
+		<h2>Sergio ha estado aqui</h2>
 		<p>Aqui luego se pondría, por ejemplo, un textbox para introducir el nombre y dni.</p>
 		<p>Falta por crear el javascript.</p>
+		
 	</div>
 </body>
 </html>
