--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,59 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<title>Prueba frontend</title>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+	integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+	integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+	crossorigin="anonymous"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+	integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+	crossorigin="anonymous">
+<!-- CUSTOM CSS -->
+<link rel="stylesheet" href="style.css">
+<title>Registro</title>
+<!-- FAVICON -->
+<link rel="icon" href="sigeva.ico" type="image/ico" />
 </head>
-<body>
-	<div class="jumbotron text-center">
-		<h1>Prueba de Front end</h1>
-		<h2>Alex</h2>
-		<p>Aqui luego se pondría, por ejemplo, un textbox para introducir el nombre y dni.</p>
-		<p>Falta por crear el javascript.</p>
+</body>
+<p>
+<form class="box" action="register.html" method="post">
+	<h1>SIGEVA</h1>
+
 		
+
 	</div>
+	 <label
+		for="Rolsignup" id="turol">Tu Rol </label>
+	<div id="rolDiv" class="selectrol">
+		<select id="rol">
+			<option value="ADMIN">ADMINISTRADOR</option>
+			<option value="ASISTENTE">PACIENTE</option>
+		</select>
+	</div>
+	<button type="button" onclick="register()" id="btnregister">Entrar</button>
+	<button type="button" onclick="register()" id="btnregister">Gestionar Pacientes</button>
+
+</form>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- KNOCKOUT -->
+<script src="https://knockoutjs.com/downloads/knockout-3.5.0.js"></script>
+<script src="register.js"></script>
+
 </body>
 </html>
